--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-dark w-nav">
             <div class="w-layout-blockcontainer container-full w-container">
                 <div class="simple-navbar-grid">
-                    <a href="/" id="w-node-_1915eedd-34dd-9e21-7340-23eb6f491612-6f49160f" class="brand w-nav-brand">
+                    <a href="/index.html" id="w-node-_1915eedd-34dd-9e21-7340-23eb6f491612-6f49160f" class="brand w-nav-brand">
                         <img src="https://cdn.prod.website-files.com/65b87902f16ed8b6ccde274a/65b8d4e10bf7ab60ee2be6c4_dynex-dark.svg" loading="eager" alt="Dynex Dark Logo" class="logo"/>
                     </a>
                     <nav role="navigation" id="w-node-_1915eedd-34dd-9e21-7340-23eb6f491614-6f49160f" class="simple-nav-menu w-nav-menu">
@@ -55,34 +55,34 @@
                             <nav class="dropdown-list w-dropdown-list">
                                 <div class="w-layout-grid grid-dropdown">
                                     <div id="w-node-fc417257-a3b5-8817-dc4e-117e9af55507-6f49160f" class="dropdown-link-item">
-                                        <a href="/" class="dropdown-link w-dropdown-link">Home</a>
-                                        <a href="/home-2" class="dropdown-link w-dropdown-link">Home 2</a>
-                                        <a href="/properties-v1" class="dropdown-link w-dropdown-link">Properties v1</a>
-                                        <a href="/properties-v2" class="dropdown-link w-dropdown-link">Properties v2</a>
-                                        <a href="/properties-v3" class="dropdown-link w-dropdown-link">Properties v3</a>
-                                        <a href="/about" class="dropdown-link w-dropdown-link">About</a>
-                                        <a href="/services" class="dropdown-link w-dropdown-link">Services</a>
-                                        <a href="/property-location" class="dropdown-link w-dropdown-link">Property Location</a>
+                                        <a href="/index.html" class="dropdown-link w-dropdown-link">Home</a>
+                                        <a href="/home-2.html" class="dropdown-link w-dropdown-link">Home 2</a>
+                                        <a href="/properties-v1.html" class="dropdown-link w-dropdown-link">Properties v1</a>
+                                        <a href="/properties-v2.html" class="dropdown-link w-dropdown-link">Properties v2</a>
+                                        <a href="/properties-v3.html" class="dropdown-link w-dropdown-link">Properties v3</a>
+                                        <a href="/about.html" class="dropdown-link w-dropdown-link">About</a>
+                                        <a href="/services.html" class="dropdown-link w-dropdown-link">Services</a>
+                                        <a href="/property-location.html" class="dropdown-link w-dropdown-link">Property Location</a>
                                     </div>
                                     <div id="w-node-_89b3a8b4-2a1f-b951-8877-5f578a237c94-6f49160f" class="dropdown-link-item">
-                                        <a href="/careers" class="dropdown-link w-dropdown-link">Careers</a>
-                                        <a href="/apartments" class="dropdown-link w-dropdown-link">Apartments</a>
-                                        <a href="/add-property" class="dropdown-link w-dropdown-link">Add Property</a>
-                                        <a href="/agent" class="dropdown-link w-dropdown-link">Agents</a>
-                                        <a href="/blog" class="dropdown-link w-dropdown-link">Blog</a>
-                                        <a href="/contact" aria-current="page" class="dropdown-link w-dropdown-link w--current">Contact</a>
-                                        <a href="/faqs" class="dropdown-link w-dropdown-link">FAQs</a>
-                                        <a href="/reviews" class="dropdown-link w-dropdown-link">Reviews</a>
+                                        <a href="/careers.html" class="dropdown-link w-dropdown-link">Careers</a>
+                                        <a href="/apartments.html" class="dropdown-link w-dropdown-link">Apartments</a>
+                                        <a href="/add-property.html" class="dropdown-link w-dropdown-link">Add Property</a>
+                                        <a href="/agent.html" class="dropdown-link w-dropdown-link">Agents</a>
+                                        <a href="/blog.html" class="dropdown-link w-dropdown-link">Blog</a>
+                                        <a href="/contact.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Contact</a>
+                                        <a href="/faqs.html" class="dropdown-link w-dropdown-link">FAQs</a>
+                                        <a href="/reviews.html" class="dropdown-link w-dropdown-link">Reviews</a>
                                     </div>
                                 </div>
                             </nav>
                         </div>
-                        <a href="/about" class="dark-nav-link w-nav-link">About</a>
-                        <a href="/contact" aria-current="page" class="dark-nav-link w-nav-link w--current">Contact</a>
+                        <a href="/about.html" class="dark-nav-link w-nav-link">About</a>
+                        <a href="/contact.html" aria-current="page" class="dark-nav-link w-nav-link w--current">Contact</a>
                     </nav>
                     <div class="nav-right">
                         <div class="button-inline">
-                            <a data-w-id="7a954a04-4392-7348-4a2a-d814340a4011" href="/add-property" class="button-arrow-black w-inline-block">
+                            <a data-w-id="7a954a04-4392-7348-4a2a-d814340a4011" href="/add-property.html" class="button-arrow-black w-inline-block">
                                 <div class="arrow-image-one">
                                     <img src="https://cdn.prod.website-files.com/65b87902f16ed8b6ccde274a/65b8c50887cae88cd8bd4fb6_arrow.svg" loading="lazy" alt="Arrow Icon" class="arrow-image"/>
                                 </div>
@@ -248,7 +248,7 @@
                             <h2 id="w-node-_43b26f41-780c-eef5-bc6a-5b7f2b5276fe-6cfe1801" class="footer-section-title">Let &#x27;s chat about your dreams</h2>
                             <div class="footer-title-wrap">
                                 <h2 class="footer-section-title">and goals</h2>
-                                <a data-w-id="7251fa13-b426-6e24-b799-61d6c2889383" href="/contact" aria-current="page" class="button-arrow-black w-inline-block w--current">
+                                <a data-w-id="7251fa13-b426-6e24-b799-61d6c2889383" href="/contact.html" aria-current="page" class="button-arrow-black w-inline-block w--current">
                                     <div class="arrow-image-one footer-button-arrow">
                                         <img src="https://cdn.prod.website-files.com/65b87902f16ed8b6ccde274a/65b8c50887cae88cd8bd4fb6_arrow.svg" loading="lazy" alt="Arrow Icon" class="arrow-image"/>
                                     </div>
@@ -283,39 +283,22 @@
                         <div id="w-node-_9807520c-65b7-e828-71bd-909a6cfe1805-6cfe1801" data-w-id="9807520c-65b7-e828-71bd-909a6cfe1805" class="footer-item">
                             <h6 class="footer-title">Pages</h6>
                             <div class="footer-links">
-                                <a href="/" class="footer-link">Home</a>
-                                <a href="/home-2" class="footer-link">Home 2</a>
-                                <a href="/properties-v1" class="footer-link">Properties v1</a>
-                                <a href="/properties-v2" class="footer-link">Properties v2</a>
-                                <a href="/properties-v3" class="footer-link">Properties v3</a>
-                                <a href="/apartments" class="footer-link">Apartments</a>
-                                <a href="/property-location" class="footer-link">Property Location</a>
-                                <a href="/add-property" class="footer-link">Add Property</a>
-                                <a href="/agent" class="footer-link">Agents</a>
-                                <a href="/about" class="footer-link">About</a>
-                                <a href="/services" class="footer-link">Services</a>
-                                <a href="/careers" class="footer-link">Careers</a>
-                                <a href="/blog" class="footer-link">Blog</a>
-                                <a href="/contact" aria-current="page" class="footer-link w--current">Contact</a>
-                                <a href="/faqs" class="footer-link">FAQs</a>
-                                <a href="/reviews" class="footer-link">Reviews</a>
-                            </div>
-                        </div>
-                        <div id="w-node-_2d1cc68a-7185-d531-a0ba-5a2d4f5b2573-6cfe1801" data-w-id="2d1cc68a-7185-d531-a0ba-5a2d4f5b2573" class="footer-item">
-                            <h6 class="footer-title">Utility Pages</h6>
-                            <div class="footer-links">
-                                <a href="/utility-pages/style-guide" class="footer-link">Style Guide</a>
-                                <a href="/utility-pages/instructions" class="footer-link">Instructions</a>
-                                <a href="/utility-pages/licenses" class="footer-link">Licenses</a>
-                            </div>
-                            <div class="footer-links">
-                                <a href="/utility-pages/changelog" class="footer-link">Changelog</a>
-                                <a href="/utility-pages/coming-soon" class="footer-link">Coming Soon</a>
-                                <a href="/utility-pages/link-in-bio" class="footer-link">Link in Bio</a>
-                            </div>
-                            <div class="footer-links">
-                                <a href="https://dynex-wbs.webflow.io/401" class="footer-link">Password Protected</a>
-                                <a href="https://dynex-wbs.webflow.io/404" class="footer-link">Error 404</a>
+                                <a href="/index.html" class="footer-link">Home</a>
+                                <a href="/home-2.html" class="footer-link">Home 2</a>
+                                <a href="/properties-v1.html" class="footer-link">Properties v1</a>
+                                <a href="/properties-v2.html" class="footer-link">Properties v2</a>
+                                <a href="/properties-v3.html" class="footer-link">Properties v3</a>
+                                <a href="/apartments.html" class="footer-link">Apartments</a>
+                                <a href="/property-location.html" class="footer-link">Property Location</a>
+                                <a href="/add-property.html" class="footer-link">Add Property</a>
+                                <a href="/agent.html" class="footer-link">Agents</a>
+                                <a href="/about.html" class="footer-link">About</a>
+                                <a href="/services.html" class="footer-link">Services</a>
+                                <a href="/careers.html" class="footer-link">Careers</a>
+                                <a href="/blog.html" class="footer-link">Blog</a>
+                                <a href="/contact.html" aria-current="page" class="footer-link w--current">Contact</a>
+                                <a href="/faqs.html" class="footer-link">FAQs</a>
+                                <a href="/reviews.html" class="footer-link">Reviews</a>
                             </div>
                         </div>
                         <div id="w-node-_9807520c-65b7-e828-71bd-909a6cfe183b-6cfe1801" data-w-id="9807520c-65b7-e828-71bd-909a6cfe183b" class="footer-item right">
